ecmascript/parser/tests/jsx/errors/nested-fragment-unclosed/input.js.stderr
error: Unterminated JSX contents
 --> $DIR/tests/jsx/errors/nested-fragment-unclosed/input.js:1:8
  |
1 | <><></>
  |        ^

